@@ -1,68 +1,104 @@
 # Testing — GitOps Deployment Platform
 
-> **Nothing was executed.** No Java, Docker, Kubernetes, Kustomize, Helm, or
-> Argo CD command ran; nothing was built, rendered, synced, deployed, or rolled
-> back. This documents the static review and the checks a disposable environment
-> *would* use.
+Exact commands to validate this project locally. Results actually observed
+with these commands are recorded honestly in [TEST_RESULTS.md](TEST_RESULTS.md).
+Commands use POSIX shell syntax; on Windows use Git Bash (or `curl.exe` from
+PowerShell). Run everything from this project folder.
 
-## 1. Static validation checklist
+## A) Java-only validation
 
-- [ ] Java package paths correct; `/health`, `/ready`, `/config` exist in source.
-- [ ] Dockerfile build context is the project root; source path matches.
-- [ ] Base Deployment selector = Pod labels = Service selector.
-- [ ] Named container port agrees with the Java HTTP port and Service targetPort.
-- [ ] Overlays patch the intended base resource names.
-- [ ] Helm values and template references agree.
-- [ ] Argo CD Applications point at the intended dev/prod overlay paths.
-
-## 2. File existence checks
-
-- [ ] `app/src/gitopsdeploymentplatform/*.java` and `docker/Dockerfile`
-- [ ] `k8s/base/` + `k8s/overlays/dev/` + `k8s/overlays/prod/`
-- [ ] `helm/java-app/` (Chart.yaml, values.yaml, templates, _helpers.tpl)
-- [ ] `gitops/argocd/dev-application.example.yaml` + `prod-application.example.yaml`
-- [ ] `docs/gitops-flow.md`, `docs/rollback.md`, `README.md`, `TESTING.md`
-
-## 3. YAML / config review checklist
-
-- [ ] All YAML is well-formed; overlays reference `../../base`.
-- [ ] dev vs prod differ (replicas, image tag, config) and match the docs.
-- [ ] Same image tag is promoted (config differs, image does not).
-- [ ] dev Application: auto-sync + self-heal, **prune disabled**.
-- [ ] prod Application: **no `automated:` block** (manual sync).
-
-## 4. Security checks
-
-- [ ] **No real secrets** — no Secret object or secret value committed.
-- [ ] **No real credentials** — no tokens, registry, or kubeconfig.
-- [ ] **No production endpoints** — repo URLs/images are `example.invalid`/placeholders.
-- [ ] Container/Pod run non-root; read-only rootfs; capabilities dropped.
-
-## 5. Commands normally used — NOT executed
+Requires JDK 21 (or run inside an `eclipse-temurin:21-jdk` container):
 
 ```bash
-# NOT executed
 javac --add-modules jdk.httpserver -d out app/src/gitopsdeploymentplatform/*.java
-docker build -f docker/Dockerfile -t my-java-app:dev-placeholder .
-kubectl kustomize k8s/overlays/dev
-kubectl kustomize k8s/overlays/prod
-helm lint helm/java-app && helm template demo helm/java-app
-kubectl apply --dry-run=client -f gitops/argocd/dev-application.example.yaml
+
+APP_ENVIRONMENT=dev APP_VERSION=0.1.0 APP_PORT=8080 \
+  java --add-modules jdk.httpserver -cp out gitopsdeploymentplatform.Main
 ```
 
-## 6. Expected results in a proper environment
+In another terminal:
 
-- Java endpoints return health, readiness, and the selected env/version.
-- Base + overlays render valid resources with matching names/selectors.
-- dev and prod render distinct replicas/tags/config.
-- Helm renders an equivalent workload from values.
-- Argo CD reports the selected revision/path; an approved sync creates resources without exposing secrets.
-- Reverting the desired-state commit produces a clear rollback diff.
+```bash
+curl -i http://localhost:8080/health
+curl -i http://localhost:8080/ready
+curl -i http://localhost:8080/config
+curl -i http://localhost:8080/
+curl -i http://localhost:8080/unknown
+curl -i http://localhost:8080/health/test
+curl -i -X POST http://localhost:8080/health
+```
 
-## 7. Manual review checklist (portfolio quality)
+Expected:
 
-- [ ] README has a clear resume-style summary and an architecture diagram.
-- [ ] Kustomize base/overlay split reads cleanly; no duplicated YAML.
-- [ ] dev vs prod sync policy difference is obvious and justified.
-- [ ] Every command is marked NOT executed; no fake badges/screenshots.
-- [ ] Honest about what static review cannot prove.
+- `/health` → 200 `{"status":"UP"}`
+- `/ready` → 200 `{"status":"READY"}`
+- `/config` → 200 `{"environment":"dev","version":"0.1.0"}`
+- `/`, `/unknown`, `/health/test` (and `/ready/test`, `/config/test`) →
+  404 JSON — routes are exact-matched
+- `POST /health` → 405 with `Allow: GET`
+
+## B) Docker build
+
+The build context is the **project root** (the Dockerfile copies `app/src`):
+
+```bash
+docker build -f docker/Dockerfile -t gitops-java-app:0.1.0 .
+
+# optional smoke test
+docker run --rm -d --name gitops-smoke -p 8080:8080 \
+  -e APP_ENVIRONMENT=dev -e APP_VERSION=0.1.0 gitops-java-app:0.1.0
+curl -i http://localhost:8080/config
+docker stop gitops-smoke
+```
+
+## C) Kustomize validation
+
+```bash
+kubectl kustomize k8s/overlays/dev
+kubectl kustomize k8s/overlays/prod
+```
+
+Expected: each renders a Namespace (`java-app-dev` /
+`java-app-prod-design-only`) plus ConfigMap, Service, and Deployment in that
+namespace; dev has 1 replica, prod has 3; both use
+`image: gitops-java-app:0.1.0`.
+
+With a reachable cluster context you can additionally run
+`kubectl apply --dry-run=client -k k8s/overlays/dev` (creates nothing; needs
+a cluster only to download validation schemas).
+
+## D) Helm validation
+
+```bash
+helm lint helm/java-app
+helm template java-app helm/java-app
+helm template java-app helm/java-app -f helm/java-app/values-dev.yaml
+helm template java-app helm/java-app -f helm/java-app/values-prod.yaml
+```
+
+Expected: lint passes; templates render the same workload shape as the
+Kustomize output, with replicas/config varying by values file.
+
+## E) Argo CD manifest review
+
+Argo CD sync is **not run by default** — the examples in `gitops/argocd/`
+point at a placeholder repo (`example.invalid`) and are meant for review, not
+application. To try them for real you need your own Argo CD instance: push
+this project to a repo you own, update `repoURL` and `path` in the
+Application manifests, apply `appproject.example.yaml`, then the two
+Applications. Only record sync results in TEST_RESULTS.md if you actually do
+this.
+
+Structural review without a cluster:
+
+```bash
+kubectl kustomize k8s/overlays/dev >/dev/null && echo "dev path renders"
+kubectl kustomize k8s/overlays/prod >/dev/null && echo "prod path renders"
+```
+
+## F) Cleanup
+
+```bash
+rm -rf out
+docker rmi gitops-java-app:0.1.0   # optional
+```
